# backend/index.js
@@ -9,7 +9,8 @@ import notificationRouter from "./routes/notification.js";
 import deviceRouter from "./routes/device.js";
 import areaRouter from "./routes/area.js"; 
 import userRouter from "./routes/user.js";
-import activityLog from './routes/activity.js';
+import activityLogRouter from './routes/activity.js';
+import taskRouter from './routes/task.js';
 
 import "./mqtt.js";
 
@@ -33,7 +34,8 @@ app.use("/notification", notificationRouter);
 app.use("/device", deviceRouter);
 app.use("/area", areaRouter);
 app.use("/user", userRouter);
-app.use("/activity", activityLog);
+app.use("/activity", activityLogRouter);
+app.use("/task", taskRouter);
 
 app.listen(3000, () => {
     console.log("Server chạy tại http://localhost:3000");
